[gd_scene load_steps=2 format=2]

[ext_resource path="res://Components/brain/communication_lobe/communication_lobe.gd" type="Script" id=1]

[node name="communication_lobe" type="Node"]
script = ExtResource( 1 )

[node name="delay_timer" type="Timer" parent="."]
[connection signal="tree_entered" from="." to="." method="_on_communication_lobe_tree_entered"]
[connection signal="timeout" from="delay_timer" to="." method="_on_delay_timer_timeout"]
